--- a/app/views/public_relations/new.html.erb
+++ b/app/views/public_relations/new.html.erb
@@ -1,7 +1,8 @@
-<div class="admin-controls">
+<div class="admin">
   <h1>New Public Relation</h1>
+  <section>
+    <%= render 'form' %>
 
-  <%= render 'form' %>
-
-  <%= link_to 'Back', public_relations_path, :class => 'button-input' %>
+    <%= link_to 'Back', public_relations_path, :class => 'button-input' %>
+  </section>
 </div>
