--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Tweet</h1>
+<div class="admin">
+  <h1>New Tweet</h1>
+  <section>
+    <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', tweets_path %>
+    <%= link_to 'Back', tweets_path, :class => 'button-input' %>
+  </section>
+</div>
