--- a/app/views/layouts/_footer_navbar.html.erb
+++ b/app/views/layouts/_footer_navbar.html.erb
@@ -3,12 +3,12 @@
   <ul>
     <li><%= link_to 'Dashboard', root_path , method: :get %></li>
     <li><%= link_to 'United Nations', un_dashboard_path %></li>
-    <li><%= link_to 'Terror Tracker controls', terror_trackers_path %></li>
+    <li><%= link_to 'Terror Tracker', terror_trackers_path %></li>
     <li><%= link_to 'Human Controls', human_control_path %></li>
-    <li><%= link_to 'PR controls', public_relations_path %></li>
-    <li><%= link_to 'News controls', news_messages_path %></li>
-    <li><%= link_to 'Tweets controls', tweets_path %></li>
-    <li><%= link_to 'Admin controls', admin_control_path %></li>
+    <li><%= link_to 'PR Controls', public_relations_path %></li>
+    <li><%= link_to 'News', news_messages_path %></li>
+    <li><%= link_to 'Tweets', tweets_path %></li>
+    <li><%= link_to 'Administration', admin_control_path %></li>
   </ul>
 </nav>
 <% end %>
