--- a/app/views/news_messages/new.html.erb
+++ b/app/views/news_messages/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New News Message</h1>
+<div class="admin">
+  <h1>New News Message</h1>
+  <section>
+    <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', news_messages_path %>
+    <%= link_to 'Back', news_messages_path, :class => 'button-input' %>
+  </section>
+</div>
