--- a/app/views/public_relations/country_status.html.erb
+++ b/app/views/public_relations/country_status.html.erb
@@ -1,4 +1,4 @@
-<div class="admin-controls">
+<div class="admin">
   <h1><%= @country %> PR View</h1>
 
   <p>
@@ -54,9 +54,9 @@
         <% @public_relations.each do |public_relation| %>
           <tr>
             <td><%= public_relation.round %></td>
-            <td><%= link_to 'Show', public_relation %></td>
-            <td><%= link_to 'Edit', edit_public_relation_path(public_relation) %></td>
-            <td><%= link_to 'Destroy', public_relation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Show', public_relation, :class => 'button-input' %></td>
+            <td><%= link_to 'Edit', edit_public_relation_path(public_relation), :class => 'button-input' %></td>
+            <td><%= link_to 'Destroy', public_relation, method: :delete, :class => 'button-input', data: { confirm: 'Are you sure?' } %></td>
             <td><%= link_to public_relation.country, country_pr_status_path( public_relation.country) %></td>
             <td><%= public_relation.pr_amount %></td>
             <td><%= public_relation.source %></td>
