--- a/app/views/public_relations/edit.html.erb
+++ b/app/views/public_relations/edit.html.erb
@@ -1,8 +1,9 @@
-<div class="admin-controls">
+<div class="admin">
   <h1>Editing Public Relations</h1>
+  <section>
+    <%= render 'form' %>
 
-  <%= render 'form' %>
-
-  <%= link_to 'Show', @public_relation, :class => 'button-input' %>
-  <%= link_to 'Back', public_relations_path, :class => 'button-input' %>
+    <%= link_to 'Show', @public_relation, :class => 'button-input' %>
+    <%= link_to 'Back', public_relations_path, :class => 'button-input' %>
+  </section>
 </div>
