--- a/app/views/public_relations/index.html.erb
+++ b/app/views/public_relations/index.html.erb
@@ -1,4 +1,4 @@
-<div class="admin-controls">
+<div class="admin">
   <h1>Listing Public Relations</h1>
   <section>
     <%= link_to 'New PR Entry', new_public_relation_path, :class => 'button-input' %>
@@ -25,9 +25,9 @@
         <% @public_relations.each do |public_relation| %>
           <tr>
             <td><%= public_relation.round %></td>
-            <td><%= link_to 'Details', public_relation %></td>
-            <td><%= link_to 'Edit', edit_public_relation_path(public_relation) %></td>
-            <td><%= link_to 'Destroy', public_relation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Details', public_relation, :class => "button-input" %></td>
+            <td><%= link_to 'Edit', edit_public_relation_path(public_relation), :class => "button-input" %></td>
+            <td><%= link_to 'Destroy', public_relation, method: :delete, :class => "button-input", data: { confirm: 'Are you sure?' } %></td>
             <td><%= public_relation.country%></td>
             <td><%= public_relation.source %></td>
             <td><%= public_relation.pr_amount %></td>
