--- a/app/views/public_relations/show.html.erb
+++ b/app/views/public_relations/show.html.erb
@@ -1,6 +1,7 @@
-<div class="admin-controls">
+<div class="admin">
   <p id="notice"><%= notice %></p>
-
-  <%= link_to 'Edit', edit_public_relation_path(@public_relation), :class => 'button-input' %>
-  <%= link_to 'Back', public_relations_path, :class => 'button-input' %>
+  <section>
+    <%= link_to 'Edit', edit_public_relation_path(@public_relation), :class => 'button-input' %>
+    <%= link_to 'Back', public_relations_path, :class => 'button-input' %>
+  </section>
 </div>
