--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Tweet</h1>
+<div class="admin">
+  <h1>Editing Tweet</h1>
+  <section>
+    <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @tweet %> |
-<%= link_to 'Back', tweets_path %>
+    <%= link_to 'Show', @tweet, :class => 'button-input' %>
+    <%= link_to 'Back', tweets_path, :class => 'button-input' %>
+  </section>
+</div>
