--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,4 +1,7 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to 'Edit', edit_tweet_path(@tweet) %> |
-<%= link_to 'Back', tweets_path %>
+<div class="admin">
+  <p id="notice"><%= notice %></p>
+  <section>
+    <%= link_to 'Edit', edit_tweet_path(@tweet), :class => 'button-input' %>
+    <%= link_to 'Back', tweets_path, :class => 'button-input' %>
+  </section>
+</div>
