--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -1,4 +1,3 @@
-
 /* =====================================
                 VARIABLES
    ===================================== */
@@ -73,24 +72,27 @@ $light-red: #FA3E3B;
   background: $background-darktan;
   padding: 20px;
 
-  table {
-    td {
-      text-align: center;
+  tr {
+    border-bottom: 0;
+  }
 
-      &:first-child {
-        text-align: left;
-      }
+  td {
+    padding: 5px;
+    text-align: center;
+
+    &:first-child {
+      text-align: left;
     }
+  }
 
-    .arrow {
-      background: url('/assets/arrows.png') 0px 0px no-repeat;
-      display: inline-block;
-      height: 20px;
-      width: 20px;
+  .arrow {
+    background: url('/assets/arrows.png') 0px 0px no-repeat;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
 
-      &.up   { background-position: 5px   7px; }
-      &.down { background-position: 5px -17px; }
-    }
+    &.up   { background-position: 5px   7px; }
+    &.down { background-position: 5px -17px; }
   }
 }
 
