--- a/app/views/public_relations/index.html.erb
+++ b/app/views/public_relations/index.html.erb
@@ -1,4 +1,4 @@
-<div class="admin">
+<div id="admin">
   <h1>Listing Public Relations</h1>
   <section>
     <%= link_to 'New PR Entry', new_public_relation_path, :class => 'button-input' %>
