--- a/app/views/public_relations/show.html.erb
+++ b/app/views/public_relations/show.html.erb
@@ -1,4 +1,4 @@
-<div class="admin">
+<div id="admin">
   <p id="notice"><%= notice %></p>
   <section>
     <%= link_to 'Edit', edit_public_relation_path(@public_relation), :class => 'button-input' %>
