--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,4 +1,4 @@
-<div class="admin">
+<div id="admin">
   <p id="notice"><%= notice %></p>
   <section>
     <%= link_to 'Edit', edit_tweet_path(@tweet), :class => 'button-input' %>
