--- a/app/views/terror_trackers/show.html.erb
+++ b/app/views/terror_trackers/show.html.erb
@@ -1,4 +1,4 @@
-<div class="admin">
+<div id="admin">
   <p id="notice"><%= notice %></p>
   <section>
     <%= link_to 'Edit', edit_terror_tracker_path(@terror_tracker), :class => 'button-input' %>
