Use red instead of light red because of visibility.

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -130,7 +130,7 @@ $light-red: #FA3E3B;
   position: relative;
 
   .progress-legend {
-    color: $light-red;
+    color: $red;
     font-size: 3.0rem;
     line-height: 3.8rem;
     position: absolute;
