Store some additional colour ideas.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,6 +55,11 @@ $red: #9f0d33;
 $light-red: #FA3E3B;
 
 
+
+//#C4DAF7 #C5DDFF
+//#C29E9A
+// #6D8491
+
 /* =====================================
                 BASE STYLES
    ===================================== */
