--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,10 +44,12 @@
                 VARIABLES
    ===================================== */
 
-$background: #ffffe9;
+$background: #03141c; //#ffffe9;
+$background-darktan: #091f2a;
+$text: #57828E;
+
 $background-blue: #94b3c4;
 $background-seafoam: #d3e3d8;
-$background-darktan: #f0f5db;
 $background-green: #dbe8db;
 
 $green: #399499;
@@ -75,7 +77,7 @@ html {
 
 body {
   background: $background;
-  color: #000000;
+  color: $text;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 2.5rem;
   line-height: 3.3rem;
@@ -139,8 +141,15 @@ p, ul {
 }
 
 p {
+  background: #061c27;
+  padding: 10px;
+  color: #596a71;
+  border-top: 1px solid #0e3642;
+  border-radius: 5px;
+  border-bottom: 1px solid #0e3642;
   margin: 15px 0;
 }
+
 
 .alien {
   font-family: Vorlon;
@@ -206,27 +215,48 @@ a:hover {
 }
 
 label {
-  display: inline-block;
-  font-weight: bold;
+  border-left: 1px solid #0d2b35;
+
+  color: #0d4752;
+  display: block;
+  font-weight: normal;
   margin-top: 20px;
-  margin-bottom: 5px;
+  margin-left: 5px;
+  padding: 5px 5px 15px 10px;
+  position: relative;
+  width: 300px;
+  font-size: 1.8rem;
+  line-height: 2.6rem;
+  z-index: 10;
+
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #0d2b35 0%, #03161d 100%), linear-gradient(to right, #0d2b35 0%, #03161d 100%);
 }
 
 select,
 input {
-  background-color: #ffffff;
-  border: 1px solid #ebebeb;
-  color: #000;
+  background-color: #061c27;
+  border: 1px solid #0e3642;
+  color: #7c97a0;
   font-size: 2rem;
   height: 40px;
   padding: 0 20px;
 }
 
 input[type="submit"] {
+  background: #09333f;
+  color: #94b2ba;
+  font-weight: bold;
   cursor: pointer;
   display: block;
-  font-style: italic;
+  font-style: normal;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
   margin-top: 20px;
+  border-top: 1px solid #2f8697;
+  border-bottom: 1px solid #2f8697;
+  border-radius: 5px;
 }
 
 input[type="submit"]:hover {
@@ -245,16 +275,26 @@ textarea {
 }
 
 .button-input {
-  background: #FFF;
-  border: 1px solid #ebebeb;
   cursor: pointer;
   display: inline-block;
-  font-style: italic;
   font-size: 2rem;
   height: 40px;
   line-height: 3.8rem;
   margin: 5px 0;
   padding: 0 20px;
+
+
+  background: #09333f;
+  color: #94b2ba;
+  font-weight: bold;
+  cursor: pointer;
+  font-style: normal;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+  margin-top: 20px;
+  border-top: 1px solid #2f8697;
+  border-bottom: 1px solid #2f8697;
+  border-radius: 5px;
+
 }
 
 
@@ -263,6 +303,7 @@ textarea {
    ===================================== */
 
 .glyphicon {
+    color: #94b2ba;
   position: relative;
   top: 1px;
   display: inline-block;
