--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,10 +32,10 @@
 
 @font-face {
   font-family: "Vorlon";
-  src: url("../assets/VORLON.eot") format("eot");
-  src: url("../assets/VORLON.woff") format("woff"),
-  url("../assets/VORLON.ttf") format("truetype"),
-  font-url("../assets/VORLON.svg#Vorlon") format("svg");
+  src: url('../assets/VORLON.eot') format('eot');
+  src: url('../assets/VORLON.woff') format('woff'),
+  url('../assets/VORLON.ttf') format('truetype'),
+  font-url('../assets/VORLON.svg#Vorlon') format('svg');
   font-weight:normal;
   font-style:normal;
 }
