--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,19 +23,19 @@
 
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../assets/glyphicons-halflings-regular.eot');
-  src: url('../assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
-  url('../assets/glyphicons-halflings-regular.woff') format('woff'),
-  url('../assets/glyphicons-halflings-regular.ttf') format('truetype'),
-  url('../assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('glyphicons-halflings-regular.eot');
+  src: url('glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
+  url('glyphicons-halflings-regular.woff') format('woff'),
+  url('glyphicons-halflings-regular.ttf') format('truetype'),
+  url('glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 
 @font-face {
   font-family: "Vorlon";
-  src: url('../assets/VORLON.eot') format('eot');
-  src: url('../assets/VORLON.woff') format('woff'),
-  url('../assets/VORLON.ttf') format('truetype'),
-  font-url('../assets/VORLON.svg#Vorlon') format('svg');
+  src: url('VORLON.eot') format('eot');
+  src: url('VORLON.woff') format('woff'),
+  url('VORLON.ttf') format('truetype'),
+  font-url('VORLON.svg#Vorlon') format('svg');
   font-weight:normal;
   font-style:normal;
 }
